<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="ime_settings_user">
        <item>@string/synchronization_activity</item>
        <item>@string/can_theme_activity</item>
        <item>@string/test_activity</item>
        <item>@string/learning_rate_activity</item>
        <item>@string/clear_personal_dictionary</item>
        <item>@string/delete_account</item>
    </string-array>
</resources>